5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1644_2711.log
== TEST (2019-06-04 16:07:48) 
-- CODE:
v = range(5)
print(v)
-- OUTPUT:
range(0, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:31:44) 
-- CODE:
rs= float(input("Digite a: ")) 
nru = int(input("Digite : ")) 
vru = float(input("Digite a: ")) 
nbus = int(input("Digite : ")) 
vbus = int(input("Digite : ")) 
calc=(nru*vru) + (nubs*vbus)
if(calc<=rs):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.737299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 5, in <module>
    vbus = int(input()) 
ValueError: invalid literal for int() with base 10: '1.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:32:16) 
-- CODE:
rs= float(input("Digite a: ")) 
nru = int(input("Digite : ")) 
vru = float(input("Digite a: ")) 
nbus = int(input("Digite : ")) 
vbus = float(input("Digite : ")) 
calc=(nru*vru) + (nubs*vbus)
if(calc<=rs):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.982327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 6, in <module>
    calc=(nru*vru) + (nubs*vbus)
NameError: name 'nubs' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:32:58) 
-- CODE:
rs= float(input("Digite a: ")) 
nru = int(input("Digite : ")) 
vru = float(input("Digite a: ")) 
nbus = int(input("Digite : ")) 
vbus = float(input("Digite : ")) 

calc= (nru*vru) + (nbus*vbus)
if(calc<=rs):
	
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.542274
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
Digite a: Digite : Digite a: Digite : Digite : INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:33:01) 
-- CODE:
rs= float(input("Digite a: ")) 
nru = int(input("Digite : ")) 
vru = float(input("Digite a: ")) 
nbus = int(input("Digite : ")) 
vbus = float(input("Digite : ")) 

calc= (nru*vru) + (nbus*vbus)
if(calc<=rs):
	
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:33:27) 
-- CODE:
rs= float(input("Digite a: ")) 
nru = int(input("Digite : ")) 
vru = float(input("Digite a: ")) 
nbus = int(input("Digite : ")) 
vbus = float(input("Digite : ")) 

calc= (nru*vru) + (nbus*vbus)
if(calc<=rs):
	
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.801026
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
